docs/original_moodle/entregas/todas/2/Tarea 11 - Máquina de Sandwich Reloaded/SIMARRA-1151896 NEIDER JOAN 2581/2019-09-22-21-40-07.ceg/compilation.txt
MaquinaSandwich.java:184: error: bad operand types for binary operator '||'
       if(cantidadQueso=0||cantidadJamon=0||cantidadMortadela=0||cantidadPanIntegral=0||cantidadPanBlanco=0);
                         ^
  first type:  int
  second type: int
MaquinaSandwich.java:184: error: bad operand types for binary operator '||'
       if(cantidadQueso=0||cantidadJamon=0||cantidadMortadela=0||cantidadPanIntegral=0||cantidadPanBlanco=0);
                                          ^
  first type:  int
  second type: int
MaquinaSandwich.java:184: error: bad operand types for binary operator '||'
       if(cantidadQueso=0||cantidadJamon=0||cantidadMortadela=0||cantidadPanIntegral=0||cantidadPanBlanco=0);
                                                               ^
  first type:  int
  second type: int
MaquinaSandwich.java:184: error: bad operand types for binary operator '||'
       if(cantidadQueso=0||cantidadJamon=0||cantidadMortadela=0||cantidadPanIntegral=0||cantidadPanBlanco=0);
                                                                                      ^
  first type:  int
  second type: int
MaquinaSandwich.java:184: error: incompatible types: int cannot be converted to boolean
       if(cantidadQueso=0||cantidadJamon=0||cantidadMortadela=0||cantidadPanIntegral=0||cantidadPanBlanco=0);
                       ^
5 errors
Not compiled
